# osup

./: .gitignore  CMakeLists.txt  README.md
osup/: osup_beatmap.c  osup_beatmap.h  osup_common.c  osup_common.h  osup_types.c  osup_types.h
res/: magma.osu
tests/: CMakeLists.txt  bm_test.c  parse_tests.c
